@@ -8,6 +8,9 @@ http://www.newbreedsoftware.com/tuxpaint/
 
 
 2004.December.5 (0.9.15)
+  * New clipped_getpixel function. It works on 3 sides so far. :-(
+    Albert Cahalan <albert@users.sf.net>
+
   * New smudge tool!
     Albert Cahalan <albert@users.sf.net>
 
